Add pricing page

--- a/index.html
+++ b/index.html
@@ -267,6 +267,12 @@
           </li>
 
           <li>
+            <a href="pricing.html" target="" class="btn btn-white btn-simple">
+              Pricing
+            </a>
+          </li>
+
+          <li>
             <a href="#contactus" target="" class="btn btn-white btn-simple">
               お問い合わせ
             </a>
@@ -853,30 +859,6 @@
 
         <div class="team">
           <div class="row">
-            <div class="col-md-6">
-              <div class="card card-profile card-plain">
-                <div class="col-md-5">
-                  <div class="card-image">
-                    <a href="#">
-                      <img class="img" src="assets/img/faces/card-profile1-square.jpg" />
-                    </a>
-                  </div>
-                </div>
-                <div class="col-md-7">
-                  <div class="card-content">
-                    <h4 class="card-title">Mike Fenstermaker</h4>
-                    <h6 class="category text-muted">Founder</h6>
-
-                    <p class="card-description">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore vitae veritatis!
-                    </p>
-                    <p class="card-description">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore vitae veritatis!
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
 
             <div class="col-md-6">
               <div class="card card-profile card-plain">
@@ -891,6 +873,46 @@
                   <div class="card-content">
                     <h4 class="card-title">Akemi</h4>
                     <h6 class="category text-muted">School Manager</h6>
+
+                    <p class="card-description">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore vitae veritatis!
+                    </p>
+                    <p class="card-description">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore vitae veritatis!
+                    </p>
+
+                    <!-- <div class="footer">
+                      <a href="#" class="btn btn-just-icon btn-simple btn-linkedin">
+                        <i class="fa fa-linkedin"></i>
+                      </a>
+                      <a href="#" class="btn btn-just-icon btn-simple btn-facebook">
+                        <i class="fa fa-facebook-square"></i>
+                      </a>
+                      <a href="#" class="btn btn-just-icon btn-simple btn-dribbble">
+                        <i class="fa fa-dribbble"></i>
+                      </a>
+                      <a href="#" class="btn btn-just-icon btn-simple btn-google">
+                        <i class="fa fa-google"></i>
+                      </a>
+                    </div> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="card card-profile card-plain">
+                <div class="col-md-5">
+                  <div class="card-image">
+                    <a href="#">
+                      <img class="img" src="assets/img/faces/kendall.jpg" />
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-7">
+                  <div class="card-content">
+                    <h4 class="card-title">Shoko</h4>
+                    <h6 class="category text-muted">Receptionist</h6>
 
                     <p class="card-description">
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et inventore vitae veritatis!
