--- a/lesson-course-info2.html
+++ b/lesson-course-info2.html
@@ -166,8 +166,8 @@
 					</li>
 
 					<li>
-						<a href="lesson-course-info2.html" class="btn btn-white btn-simple">
-							course2
+						<a href="lesson-course-info.html" class="btn btn-white btn-simple">
+							course1
 						</a>
 					</li>
 				</ul>
@@ -179,7 +179,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
-					<h2 class="title">Lesson Course Info</h1>
+					<h2 class="title">Lesson Course Info 2</h1>
 				</div>
 			</div>
 		</div>
@@ -444,9 +444,7 @@
 					</div>
 				</div>
 
-
 				<!--     *********    END BLOGS 3      *********      -->
-
 
 			</div>
 
@@ -454,7 +452,177 @@
 
 
 
-			<hr>
+
+
+			<div class="cd-section" id="pricing">
+
+				<!--     *********    PRICING 5     *********      -->
+
+				<div class="pricing-5 section-gray" id="pricing-5 lessons">
+
+					<div class="container">
+						<div class="row">
+							<div class="col-md-4">
+								<h2 class="title">Choose a plan for your next project</h2>
+								<ul class="nav nav-pills" role="tablist">
+									<li class="active">
+										<a href="#private" role="tab" data-toggle="tab">
+											Private/Web
+										</a>
+									</li>
+									<li>
+										<a href="#semi-private" role="tab" data-toggle="tab">
+											Semi-Private
+										</a>
+									</li>
+									<li>
+										<a href="#group" role="tab" data-toggle="tab">
+											Group
+										</a>
+									</li>
+								</ul>
+
+								<p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam quo ducimus illo beatae at
+									eos eum, qui nulla distinctio omnis mollitia reprehenderit sunt. Eligendi eius iure totam reprehenderit
+									laboriosam, veniam.</p>
+								<a href="#" class="btn btn-primary margin-top-small">
+									Click here for more plans
+								</a>
+							</div>
+
+							<div class="col-md-7 col-md-offset-1">
+								<div class="tab-content tab-space">
+									<div class="tab-pane active" id="private">
+
+										<div class="col-md-6">
+											<div class="card card-pricing card-raised">
+												<div class="card-content">
+													<h6 class="category">In School</h6>
+													<h3>from</h3>
+													<h1 style="margin-top: 0; padding-top: 0;" class="card-title"><small>¥</small>3600<small>+tax</small></h1>
+													<ul>
+														<li><b>1</b> Student</li>
+														<li><b>40</b> Minutes</li>
+														<!-- <li><b>4 to 100</b> Lesson pack</li> -->
+														<li>Up to 2.5 years to take the lessons</li>
+													</ul>
+													<a href="#" class="btn btn-primary btn-round">
+														Contact
+													</a>
+												</div>
+											</div>
+										</div>
+
+										<div class="col-md-6">
+											<div class="card card-pricing card-plain">
+												<div class="card-content">
+													<h6 class="category">Web Lesson</h6>
+													<h1 class="card-title"><small>¥</small>3000</h1>
+													<ul>
+														<li><b>1</b> Student</li>
+														<li><b>40</b> Minutes</li>
+														<li><b>##</b> ###</li>
+														<li><b>##</b> ###</li>
+													</ul>
+													<a href="#" class="btn btn-white btn-round">
+														Contact
+													</a>
+												</div>
+											</div>
+										</div>
+
+									</div>
+
+									<div class="tab-pane" id="semi-private">
+										<div class="col-md-6">
+											<div class="card card-pricing card-raised">
+												<div class="card-content">
+													<h6 class="category">In School</h6>
+													<h3>from</h3>
+													<h1 style="margin-top: 0; padding-top: 0;" class="card-title"><small>¥</small>2500<small>+tax</small></h1>
+													<ul>
+														<li><b>2</b> Students</li>
+														<li><b>40</b> Minutes</li>
+													</ul>
+													<a href="#" class="btn btn-primary btn-round">
+														Contact
+													</a>
+												</div>
+											</div>
+										</div>
+
+										<div class="col-md-6">
+											<div class="card card-pricing card-plain">
+												<div class="card-content">
+													<h6 class="category">Web Lesson</h6>
+													<h1 class="card-title"><small>¥</small>3000</h1>
+													<ul>
+														<li><b>2</b> Students</li>
+														<li><b>40</b> Minutes</li>
+														<li><b>##</b> ###</li>
+														<li><b>##</b> ###</li>
+													</ul>
+													<a href="#" class="btn btn-primary btn-round">
+														Contact
+													</a>
+												</div>
+											</div>
+										</div>
+
+									</div>
+
+									<div class="tab-pane" id="group">
+										<div class="col-md-6">
+											<div class="card card-pricing card-raised">
+												<div class="card-content">
+													<h6 class="category">In School</h6>
+													<h3>from</h3>
+													<h1 style="margin-top: 0; padding-top: 0;" class="card-title"><small>¥</small>6000<small>+tax</small></h1>
+													<ul>
+														<li>Up to <b>4</b> Students</li>
+														<li><b>40</b> Minutes</li>
+													</ul>
+													<a href="#" class="btn btn-primary btn-round">
+														Contact
+													</a>
+												</div>
+											</div>
+										</div>
+
+										<div class="col-md-6">
+											<div class="card card-pricing card-plain">
+												<div class="card-content">
+													<h6 class="category">In School</h6>
+													<h1 class="card-title"><small>¥</small>2000</h1>
+													<ul>
+														<li><b>Up to 4</b> Students</li>
+														<li><b>40</b> Minutes</li>
+														<li><b>##</b> ###</li>
+														<li><b>##</b> ###</li>
+													</ul>
+													<a href="#" class="btn btn-primary btn-round">
+														Contact
+													</a>
+												</div>
+											</div>
+										</div>
+
+									</div>
+								</div>
+							</div>
+
+
+						</div>
+
+					</div>
+				</div>
+
+				<!--     *********    END PRICING 5      *********      -->
+
+			</div>
+
+
+
 
 
 
