--- a/index.html
+++ b/index.html
@@ -273,6 +273,12 @@
           </li>
 
           <li>
+            <a href="about.html" target="" class="btn btn-white btn-simple">
+              About
+            </a>
+          </li>
+
+          <li>
             <a href="#contactus" target="" class="btn btn-white btn-simple">
               お問い合わせ
             </a>
