Add date to TOTD and some Japanese content

--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@
       <div id="features" class="section text-center">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <h2 class="title">Daily Theme</h2>
+            <h2 class="title">デイリーテーマ</h2>
+            <h4 id="totd-date"></h4>
             <h2 id="totd-textbox"></h2>
           </div>
         </div>
@@ -321,10 +322,9 @@
                 <div class="icon icon-info">
                   <i class="material-icons">chat</i>
                 </div>
-                <h4 class="info-title">Free Chat</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam iure nihil tempore!
-                  Rem alias id impedit fugiat, architecto accusamus magnam nemo atque ipsum commodi porro
-                  harum non et voluptate sequi.</p>
+                <h4 class="info-title">フリーカンバセーション</h4>
+                <p>サンミハールのフリーカンバセーションは受け放題がお得！！<br> テキスト・教材は使わず、旬の話題を中心に自由に会話、フリートークをしていただくクラスです。何年も英語を勉強しているのに実際に外国人を目にすると話せない…と言う方にご利用頂けるのがこのコースです。当スクールの教師と自由に会話を楽しんで頂く中で、ご自身の会話力を高めて頂こうというものです。サンミハールは神戸三宮でフリートークをいち早く開催した英会話教室です。
+                </p>
               </div>
             </div>
 
@@ -333,10 +333,8 @@
                 <div class="icon icon-success">
                   <i class="material-icons">verified_user</i>
                 </div>
-                <h4 class="info-title">Native English speaking teachers</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum amet, sapiente eaque
-                  accusantium! Ipsam, fugiat. Quod, omnis ea? Rerum pariatur repellendus iure facere
-                  autem molestiae iste quasi earum sit modi.</p>
+                <h4 class="info-title">サンミハールは先生が最高！</h4>
+                <p>これは生徒さんのお言葉です。外国人とネイティブは違います。プライベート（マンツーマン）レッスンの教師はネイティブであり、大学等で言語やビジネスを学んだ人材を採用するのはもちろんのこと。サンミハールでは採用後も生徒さんが話したことをきちんと細かく訂正してくれる家庭教師のような英会話教師の育成に力を注いでいます。英会話教師の質を保つため、トレーニングはもちろんのこと、抜き打ち授業チェックを行います。また、定期的にスタッフミーティングを行い、今どの生徒さんが何を必要としていて、授業やカウンセリングで何をすべきかを話し合い反映させます。</p>
               </div>
             </div>
 
@@ -345,16 +343,14 @@
                 <div class="icon icon-danger">
                   <i class="material-icons">alarm_on</i>
                 </div>
-                <h4 class="info-title">Book anytime</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum dignissimos unde doloremque
-                  nihil omnis perferendis dolores placeat deserunt, ut rerum id. Quasi suscipit ducimus
-                  temporibus at ipsa, deserunt saepe aperiam!</p>
+                <h4 class="info-title">ご予約のご案内</h4>
+                <p>レッスンのご予約は神戸三宮の教室で、お電話で、またメールやLINEでも出来ます。</p>
               </div>
             </div>
           </div>
           <div class="row">
             <a href="#" class="btn btn-primary btn-lg">
-              See our lessons
+              レッスンを詳しく見てみる
             </a>
           </div>
         </div>
@@ -374,10 +370,8 @@
         <div class="projects-4" id="projects-4">
           <div class="row">
             <div class="col-md-8 col-md-offset-2 text-center">
-              <h2 class="title">Current Campaign</h2>
-              <h5 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia consequatur deserunt ut
-                quo nesciunt iste doloremque officia recusandae corporis sequi placeat officiis temporibus,
-                quasi, distinctio. Asperiores voluptates sit, autem! Laboriosam.</h5>
+              <h2 class="title">キャンペーン！</h2>
+              <h5 class="description">新入会者限定！入会金割引キャンペーン</h5>
               <div class="section-space"></div>
             </div>
           </div>
@@ -404,14 +398,14 @@
                   <i class="material-icons">stars</i>
                 </div>
                 <div class="description">
-                  <h4 class="info-title">Feature 1</h4>
+                  <h4 class="info-title">10月から始める英会話</h4>
                   <p class="description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    10月に新たに入会される方のみの特典です。入会金が通常10,800円(税込)のところ30％OFF
                   </p>
                 </div>
               </div>
 
-              <div class="info info-horizontal">
+              <!-- <div class="info info-horizontal">
                 <div class="icon icon-primary">
                   <i class="material-icons">stars</i>
                 </div>
@@ -422,7 +416,7 @@
                     doloremque in officia odio voluptates est fuga.
                   </p>
                 </div>
-              </div>
+              </div> -->
             </div>
 
           </div>
