--- a/about.html
+++ b/about.html
@@ -222,7 +222,11 @@
 							excepturi quod ullam similique doloremque quisquam, voluptatibus quis nihil inventore perspiciatis,
 							reiciendis iusto enim, repellendus fugit magni.</p>
 					</div>
+				</div>
 
+				<hr style="margin: 80px 0">
+
+				<div class="row">
 					<div class="section col-md-10 col-md-offset-1">
 						<div class="col-md-4">
 							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="../assets/img/examples/blog4.jpg">
