Added Japanese content to navbar

--- a/lesson-course-info2.html
+++ b/lesson-course-info2.html
@@ -485,8 +485,11 @@
 								<p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam quo ducimus illo beatae at
 									eos eum, qui nulla distinctio omnis mollitia reprehenderit sunt. Eligendi eius iure totam reprehenderit
 									laboriosam, veniam.</p>
-								<a href="#" class="btn btn-primary margin-top-small">
-									Click here for more plans
+								<a href="pricing.html" class="btn btn-white margin-top-small" style="width: 100%; max-width: 300px; display: block;">
+									See more pricing
+								</a>
+								<a href="#contactus" class="btn btn-primary" style="width: 100%; max-width: 300px; display: block;">
+									Book a trial lesson now
 								</a>
 							</div>
 
