--- a/index.html
+++ b/index.html
@@ -82,49 +82,41 @@
               </li>
               <li>
                 <a href="#campaign">
-                  Current Campaign
+                  キャンペーン
                 </a>
               </li>
               <li>
                 <a href="#pricing">
-                  Lessons
+                  料金と時間割
                 </a>
               </li>
               <li>
                 <a href="#new-students">
-                  New Students
+                  初めての方へ
                 </a>
               </li>
               <li>
                 <a href="#testimonials">
-                  Testimonials
+                  生徒の声
                 </a>
               </li>
               <li>
                 <a href="#events">
-                  Events
+                  イベント
                 </a>
               </li>
               <li>
                 <a href="#team">
-                  Our Team
+                  チーム
                 </a>
               </li>
               <li>
                 <a href="#contactus">
-                  Contact
+                  お問い合わせ
                 </a>
               </li>
             </ul>
           </li>
-
-
-
-
-
-
-
-
 
 
           <li>
@@ -150,12 +142,12 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="lesson-course-info2.html">
                   TOEIC・英検
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="lesson-course-info2.html">
                   TOEFL・IELTS
                 </a>
               </li>
@@ -202,7 +194,7 @@
             </ul>
           </li>
 
-          <li class="dropdown">
+          <!-- <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Link 3
               <b class="caret"></b>
@@ -228,47 +220,12 @@
                   sub-link
                 </a>
               </li>
-              <li>
-                <a href="#">
-                  sub-link
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  sub-link
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  sub-link
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  sub-link
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  sub-link
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  sub-link
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  sub-link
-                </a>
-              </li>
             </ul>
-          </li>
+          </li> -->
 
           <li>
             <a href="pricing.html" target="" class="btn btn-white btn-simple">
-              Pricing
+              料金と時間割
             </a>
           </li>
 
@@ -466,7 +423,7 @@
               <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam quo ducimus illo beatae
                 at eos eum, qui nulla distinctio omnis mollitia reprehenderit sunt. Eligendi eius iure
                 totam reprehenderit laboriosam, veniam.</p>
-              <a href="#" class="btn btn-primary margin-top-small">
+              <a href="pricing.html" class="btn btn-primary margin-top-small">
                 Click here for more plans
               </a>
             </div>
