--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
 		</div>
 	</nav>
 
-	<div class="page-header header-filter" data-parallax="true" style="background-image: url('../assets/img/bg5.jpg');">
+	<div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg5.jpg');">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
@@ -229,13 +229,13 @@
 				<div class="row">
 					<div class="section col-md-10 col-md-offset-1">
 						<div class="col-md-4">
-							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="../assets/img/examples/blog4.jpg">
+							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="assets/img/examples/blog4.jpg">
 						</div>
 						<div class="col-md-4">
-							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="../assets/img/examples/blog3.jpg">
+							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="assets/img/examples/blog3.jpg">
 						</div>
 						<div class="col-md-4">
-							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="../assets/img/examples/blog1.jpg">
+							<img class="img-rounded img-responsive img-raised" alt="Raised Image" src="assets/img/examples/blog1.jpg">
 						</div>
 					</div>
 
@@ -268,7 +268,7 @@
 							in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<div class="col-md-5">
-						<img class="img-rounded img-responsive img-raised" src="../assets/img/examples/blog4.jpg" alt="" style="width: 100%; height: 300px;">
+						<img class="img-rounded img-responsive img-raised" src="assets/img/examples/blog4.jpg" alt="" style="width: 100%; height: 300px;">
 					</div>
 				</div>
 
