Update lesson-course contact form and add access section

--- a/lesson-course.html
+++ b/lesson-course.html
@@ -546,35 +546,63 @@
 				<div class="section section-contacts">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
-							<h2 class="text-center title">Book a Free Trial lesson</h2>
-							<h4 class="text-center description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ullam quo quaerat quam nostrum sed
-								necessitatibus, reprehenderit temporibus odio laboriosam saepe possimus ad deleniti ducimus quis
-								eos in exercitationem similique.</h4>
+							<h2 class="text-center title">今すぐ無料体験レッスンを申し込む</h2>
+							<h4 class="text-center description">
+								お問合せや無料体験レッスンのお申込みは、お電話<strong>（078-331-3035）</strong>、
+								<a href="mailto:study@sunmihall.com">メール</a>、または以下のお問合せフォームからお気軽にご連絡ください。
+							</h4>
+							<h4 class="text-center description">
+								下記フォームよりお問い合わせいただきました場合、自動返信メールが届きます。 受付完了の自動返信メールが届かない場合は、 お問い合わせが受付できていない可能性がございますので、お手数ですがお電話
+								<strong>（078-331-3035）</strong>にてご連絡ください。
+							</h4>
 							<form class="contact-form">
+								<div class="row">
+									<div class="col-md-12">
+										<div class="form-group label-floating">
+											<label class="control-label">お名前（必須）</label>
+											<input type="email" class="form-control" required>
+										</div>
+									</div>
+								</div>
 								<div class="row">
 									<div class="col-md-6">
 										<div class="form-group label-floating">
-											<label class="control-label">Your Name</label>
-											<input type="email" class="form-control">
+											<label class="control-label">メールアドレス（必須）</label>
+											<input type="email" class="form-control" required>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group label-floating">
-											<label class="control-label">Your Email</label>
-											<input type="email" class="form-control">
+											<label class="control-label">メールアドレス（確認用）</label>
+											<input type="email" class="form-control" required>
+										</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-6">
+										<div class="form-group label-floating">
+											<label class="control-label">電話番号（必須）</label>
+											<input type="text" class="form-control" required>
+										</div>
+									</div>
+									<div class="col-md-6">
+										<div class="form-group label-floating">
+											<label class="control-label">折り返しのお電話ご希望の時間帯</label>
+											<input type="text" class="form-control">
 										</div>
 									</div>
 								</div>
 
 								<div class="form-group label-floating">
-									<label class="control-label">Your Messge</label>
-									<textarea class="form-control" rows="4"></textarea>
+									<label class="control-label">お問い合わせ内容</label>
+									<textarea class="form-control" rows="4" required></textarea>
 								</div>
 
 								<div class="row">
 									<div class="col-md-4 col-md-offset-4 text-center">
 										<button class="btn btn-primary btn-raised">
-											Send Message
+											送信
+											<i class="material-icons pull-right" style="margin-left: 10px;">send</i>
 										</button>
 									</div>
 								</div>
