--- a/index.html
+++ b/index.html
@@ -321,6 +321,15 @@
             レッスンを詳しく見てみる
           </a>
         </div>
+
+
+        <!-- <div class="row text-center">
+          <a href="#" class="btn btn-primary btn-lg">
+            今すぐ無料体験レッスンを申し込む
+          </a>
+        </div> -->
+
+
         <!-- </div> -->
       </div>
     </div>
@@ -618,15 +627,15 @@
                   ―上達したい人のための英会話
                 </h3>
 
-                <h5 class="card-description">
+                <h5 class="card-description text-left">
                   海外旅行で言いたい事が英語で言えたら。仕事で海外からの取引先の電話を英語でさらっとこなせたら。 転職にTOEIC730点は欲しいな。英会話を始める理由はいろいろ。初めて英会話を始めるのには勇気がいります。でもほんのちょっとの勇気であなたの舞台が世界に広がります。そのお手伝いをするための英会話教室が神戸・三宮の英会話サンミハールです。
                 </h5>
 
-                <h5 class="card-description">
+                <h5 class="card-description text-left">
                   神戸・三宮の英会話サンミハールは英会話上達に最も効果的なマンツーマンのレッスンを神戸でいち早く取り入れたアメリカ人が経営する地元の英会話教室です。
                 </h5>
 
-                <h5 class="card-description">
+                <h5 class="card-description text-left">
                   気軽に英会話の扉を開くために
                   <ol>
                     <li>ご予算に合わせてしかも低料金で無理なく計画的に英会話レッスンを受けられます。遠慮なくご相談ください。</li>
@@ -1090,6 +1099,265 @@
         </div>
 
       </div> -->
+
+
+
+
+
+
+
+
+    <div class="container">
+
+
+      <!-- VERSION ONE -->
+      <div id="features" class="section stations-section">
+
+        <h4 class="title text-center">神戸・三宮の英会話サンミハールランゲージサービス</h4>
+        <h2 class="title text-center">アクセス・地図</h2>
+
+        <h5 class="info-heading text-center">英会話サンミハール・神戸三宮教室への道順　三宮・元町どの駅からも3分から5分</h3>
+          <br>
+
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card">
+                <img class="img" src="assets/img/examples/card-blog4.jpg" />
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <!-- <div class="info"> -->
+              <div class="">
+                <!-- <div class="icon icon-success text-center">
+                <i class="material-icons">verified_user</i>
+              </div> -->
+                <h4 class="info-title text-center">JR三ノ宮駅西口から ―</h4>
+                <p>
+                  改札を出て左の階段を降り少し行くと三宮センター街の入り口があります。三宮センター街を元町方面へ向かって歩き、2つめの筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card">
+                <img class="img" src="assets/img/examples/card-blog4.jpg" />
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="">
+                <h4 class="info-title text-center">阪神三宮西口から ―</h4>
+                <p>
+                  改札を出て左へ。そごうの手前を右へ行き、突き当たり左手の階段を上がるとセンター街の入り口が見えます。センター街を元町方面へ向かって歩き、2つめの筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。（雨の日は三宮・花時計前駅方面へ歩き、三宮・花時計前駅からの案内をご利用下さい）
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card">
+                <img class="img" src="assets/img/examples/card-blog4.jpg" />
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="">
+                <h4 class="info-title text-center">阪急三宮駅西口から ―</h4>
+                <p>
+                  改札を出て階段を降りると前にマクドナルドがあります。その左横の阪急高架下飲食店街を元町方面に向かって30秒くらい行くと信号があります。信号を渡ったらまたすぐ左の信号を渡り、センター街を横切ったら10秒くらいで、三宮スクール前の英会話の看板が見えます。
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card">
+                <img class="img" src="assets/img/examples/card-blog4.jpg" />
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="">
+                <h4 class="info-title text-center">市営地下鉄海岸線三宮・花時計前駅から ―</h4>
+                <p>
+                  改札を出て左へ元町地下連絡通路（地下道）をまっすぐ西に進むと、 市営地下鉄海岸線の旧居留地・大丸前駅につながっています。右側にB5番の出口の案内がありその横にエレベーターがあります。エレベーターで地上にあがるとすぐ前がサンミハールです。
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card">
+                <img class="img" src="assets/img/examples/card-blog4.jpg" />
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="">
+                <h4 class="info-title text-center">市営地下鉄海岸線旧居留地・大丸前駅から ―</h4>
+                <p>
+                  改札を出て右へ三宮地下連絡通路（地下道）をまっすぐ東に進むと、市営地下鉄海岸線の三宮・花時計前駅につながっています。左側にB5番の出口の案内がありその横にエレベーターがあります。エレベーターで地上にあがるとすぐ前がサンミハールです。
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card">
+                <img class="img" src="assets/img/examples/card-blog4.jpg" />
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="">
+                <h4 class="info-title text-center">JR元町駅東口から ―</h4>
+                <p>
+                  改札を出て右へ。そのまま信号を南に渡ると三宮センター街の入り口が左側に見えてきます。三宮センター街を三宮方面へ向かって歩き信号を一つ渡り、次の大きな筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card">
+                <img class="img" src="assets/img/examples/card-blog4.jpg" />
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="">
+                <h4 class="info-title text-center">阪神元町駅東口から ―</h4>
+                <p>
+                  改札を出て左手前の階段を上がるとJR元町東口に出ます。駅前の信号を南に渡ると三宮センター街の入り口が左側に見えてきます。三宮センター街を三宮方面へ向かって歩き信号を一つ渡り、次の大きな筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card">
+                <img class="img" src="assets/img/examples/card-blog4.jpg" />
+              </div>
+            </div>
+          </div>
+
+
+      </div>
+      <!-- VERSION ONE END -->
+
+      <hr>
+
+      <!-- VERSION TWO -->
+      <div id="features" class="section stations-section">
+
+        <h4 class="title text-center">神戸・三宮の英会話サンミハールランゲージサービス</h4>
+        <h2 class="title text-center">アクセス・地図</h2>
+        <h5 class="info-heading text-center">英会話サンミハール・神戸三宮教室への道順　三宮・元町どの駅からも3分から5分</h3>
+          <br>
+
+          <div class="row">
+
+            <div class="col-md-4">
+              <!-- <div class="info"> -->
+              <div class="">
+                <!-- <div class="icon icon-success text-center">
+                <i class="material-icons">verified_user</i>
+              </div> -->
+                <h4 class="info-title text-center">JR三ノ宮駅西口から ―</h4>
+                <p>
+                  改札を出て左の階段を降り少し行くと三宮センター街の入り口があります。三宮センター街を元町方面へ向かって歩き、2つめの筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="">
+                <h4 class="info-title text-center">阪神三宮西口から ―</h4>
+                <p>
+                  改札を出て左へ。そごうの手前を右へ行き、突き当たり左手の階段を上がるとセンター街の入り口が見えます。センター街を元町方面へ向かって歩き、2つめの筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。（雨の日は三宮・花時計前駅方面へ歩き、三宮・花時計前駅からの案内をご利用下さい）
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="">
+                <h4 class="info-title text-center">阪急三宮駅西口から ―</h4>
+                <p>
+                  改札を出て階段を降りると前にマクドナルドがあります。その左横の阪急高架下飲食店街を元町方面に向かって30秒くらい行くと信号があります。信号を渡ったらまたすぐ左の信号を渡り、センター街を横切ったら10秒くらいで、三宮スクール前の英会話の看板が見えます。
+                </p>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="row">
+
+            <div class="col-md-4">
+              <div class="card">
+                <img class="img" src="assets/img/examples/card-blog4.jpg" />
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="">
+                <h4 class="info-title text-center">市営地下鉄海岸線三宮・花時計前駅から ―</h4>
+                <p>
+                  改札を出て左へ元町地下連絡通路（地下道）をまっすぐ西に進むと、 市営地下鉄海岸線の旧居留地・大丸前駅につながっています。右側にB5番の出口の案内がありその横にエレベーターがあります。エレベーターで地上にあがるとすぐ前がサンミハールです。
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card">
+                <img class="img" src="assets/img/examples/card-blog4.jpg" />
+              </div>
+            </div>
+
+          </div>
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="">
+                <h4 class="info-title text-center">市営地下鉄海岸線旧居留地・大丸前駅から ―</h4>
+                <p>
+                  改札を出て右へ三宮地下連絡通路（地下道）をまっすぐ東に進むと、市営地下鉄海岸線の三宮・花時計前駅につながっています。左側にB5番の出口の案内がありその横にエレベーターがあります。エレベーターで地上にあがるとすぐ前がサンミハールです。
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="">
+                <h4 class="info-title text-center">JR元町駅東口から ―</h4>
+                <p>
+                  改札を出て右へ。そのまま信号を南に渡ると三宮センター街の入り口が左側に見えてきます。三宮センター街を三宮方面へ向かって歩き信号を一つ渡り、次の大きな筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="">
+                <h4 class="info-title text-center">阪神元町駅東口から ―</h4>
+                <p>
+                  改札を出て左手前の階段を上がるとJR元町東口に出ます。駅前の信号を南に渡ると三宮センター街の入り口が左側に見えてきます。三宮センター街を三宮方面へ向かって歩き信号を一つ渡り、次の大きな筋が生田ロードです。生田ロードを左に曲がると10秒くらいで、三宮スクール前の英会話の看板が見えます。
+                </p>
+              </div>
+            </div>
+          </div>
+
+      </div>
+      <!-- VERSION TWO END -->
+    </div>
+
+
+
+
+
+
+
 
 
 
